# strong-exchange-rate-provider-ecb

./: .gitattributes  .pre-commit-config  .pre-commit-config.yaml  README.md  pyproject.toml
app/: data.py  main.py  models.py  tasks.py  test_main.py  test_tasks.py
ecb_rates_history/: eurofxref-sdmx.xml
