[tool.poetry]
name = "strong-exchange-rate-provider-ecb"
version = "0.1.0"
description = ""
authors = ["Egor Poderiagin <egor@crazyrussian.pro>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
